2011-03-30  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Eric Seidel.

        Left/Right borders/padding/margins are not always added correctly when rendering multiline inline boxes with bidi elements
        https://bugs.webkit.org/show_bug.cgi?id=9272

        * fast/borders/rtl-border-01.html: Added.
        * fast/borders/rtl-border-02.html: Added.
        * fast/borders/rtl-border-03.html: Added.
        * fast/borders/rtl-border-04.html: Added.
        * fast/borders/rtl-border-05.html: Added.
        * platform/mac/css2.1/t090501-c414-flt-ln-02-d-expected.checksum:
        * platform/mac/css2.1/t090501-c414-flt-ln-02-d-expected.png:
        * platform/mac/css2.1/t090501-c414-flt-ln-02-d-expected.txt:
        * platform/mac/fast/borders/rtl-border-01-expected.checksum: Added.
        * platform/mac/fast/borders/rtl-border-01-expected.png: Added.
        * platform/mac/fast/borders/rtl-border-01-expected.txt: Added.
        * platform/mac/fast/borders/rtl-border-02-expected.checksum: Added.
        * platform/mac/fast/borders/rtl-border-02-expected.png: Added.
        * platform/mac/fast/borders/rtl-border-02-expected.txt: Added.
        * platform/mac/fast/borders/rtl-border-03-expected.checksum: Added.
        * platform/mac/fast/borders/rtl-border-03-expected.png: Added.
        * platform/mac/fast/borders/rtl-border-03-expected.txt: Added.
        * platform/mac/fast/borders/rtl-border-04-expected.checksum: Added.
        * platform/mac/fast/borders/rtl-border-04-expected.png: Added.
        * platform/mac/fast/borders/rtl-border-04-expected.txt: Added.
        * platform/mac/fast/borders/rtl-border-05-expected.checksum: Added.
        * platform/mac/fast/borders/rtl-border-05-expected.png: Added.
        * platform/mac/fast/borders/rtl-border-05-expected.txt: Added.
2011-03-30  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Eric Seidel.

        Left/Right borders/padding/margins are not always added correctly when rendering multiline inline boxes with bidi elements
        https://bugs.webkit.org/show_bug.cgi?id=9272

        Also fixes https://bugs.webkit.org/show_bug.cgi?id=47210 and https://bugs.webkit.org/show_bug.cgi?id=8392.

        Change how we decide if an InlineFlowBox is the last one for its renderer. Use the position of resolver's logicallyLastRun
        to decide if there is more text in the next line.

        Tests: fast/borders/rtl-border-01.html
               fast/borders/rtl-border-02.html
               fast/borders/rtl-border-03.html
               fast/borders/rtl-border-04.html
               fast/borders/rtl-border-05.html

        * rendering/InlineFlowBox.cpp:
        (WebCore::isAnsectorAndWithinBlock):
        (WebCore::InlineFlowBox::determineSpacingForFlowBoxes):
        * rendering/InlineFlowBox.h:
        * rendering/RenderBlock.h:
        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::RenderBlock::constructLine):
        (WebCore::reachedEndOfTextRenderer):
        (WebCore::RenderBlock::layoutInlineChildren):

Canonical link: https://commits.webkit.org/72217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82419 268f45cc-cd09-0410-ab3c-d52691b4dbfc